Fix angular build step

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -19,7 +19,7 @@ jobs:
             - id: s4
               run: npm i -s @angular/cli && npm ci && echo "Installed!"
             - id: s5
-              run: ng build
+              run: npm run build
             - id: s6
               run: ls -l dist/countingbook/browser
             - id: s7
